[package]
name = "rocket-csp-endpoint"
version = "0.1.0"
authors = ["Michael Weiss <dev.primeos@gmail.com>"]
license = "MIT"
publish = false
description = "Content Security Policy endpoint for the FSI"
repository = "https://github.com/fsi-tue/rocket-csp-endpoint"

[dependencies]
time = "0.1"
rocket = "0.3.6"
rocket_contrib = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.11"
